tests/negative/typecheck/call.orng
// call.orng:5:21: error: expected a value of type `Int`, got a value of type `Bool`
// fn main() -> Int {f()}
//                    ^
// 
fn main() -> Int {f()}

fn f()->Bool {'d'}